--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     height:100%;
     width:100%;
 }
+html {
+    font-family: "Rubik", sans-serif;
+    scroll-behavior: smooth;
+}
 .navbar {
     position: fixed;
     top: 0;
@@ -22,8 +26,7 @@ body {
     overflow: hidden;
 }
 .navbar-wrapper {
-    display: flex
-;
+    display: flex;
     justify-content: space-between;
 }
 a {
@@ -36,8 +39,7 @@ a {
     width: auto;
     height: auto;
     padding: 0;
-    display: flex
-;
+    display: flex;
     flex-direction: row;
     align-items: left;
     gap: 30px;
@@ -46,4 +48,301 @@ a {
     color: #000;
     font-size: 22px;
     transition: 0.25s ease;
+}
+li {
+    list-style: none;
+}
+.home {
+    display: grid
+;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 50px;
+    padding: 10px;
+}
+.home-left {
+    text-align: center;
+    font-size: 42px;
+    font-weight: 600;
+    line-height: 1.1;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+}
+.home-right {
+    position: relative;
+    aspect-ratio: 10 / 11;
+    padding-top: 70%;
+}
+section {
+    display: block;
+    unicode-bidi: isolate;
+}
+.food-1 {
+    top: 25%;
+    left: -4%;
+}
+.food-img {
+    position: absolute;
+    width: 60%;
+}
+.food-2 {
+    top: 12%;
+    right: -4%;
+}
+.food-3 {
+    top: 40%;
+    right: -5%;
+}
+.home-left p {
+    font-size: 20px;
+    display: inline-block;
+    padding: 3px;
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+:-webkit-any(article, aside, nav, section) h1 {
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+}
+.about {
+    padding-top: 120px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    display: grid
+;
+    grid-template-columns: 1fr 2fr;
+    gap: 60px;
+    align-items: center;
+}div {
+    display: block;
+    unicode-bidi: isolate;
+}
+.about-left img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 3px dotted;
+    padding: 10px;
+}
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+img, svg, ion-icon, span, button {
+    display: block;
+}
+.services {
+    padding: 110px;
+    display: grid
+;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+}
+.card-number {
+    font-size: 48px;
+    font-family: "Monoton", cursive;
+    color: #f7c532;
+    margin: 0;
+}
+.card-heading {
+    color: #000;
+    font-size: 28px;
+    font-weight: 600;
+    letter-spacing: -1px;
+    margin-bottom: 20px;
+    display: inline;
+}
+.card-text {
+    color: #000;
+    font-size: 16px;
+    line-height: 1.5;
+}
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+.menu {
+    padding: 120px;
+}
+section {
+    display: block;
+    unicode-bidi: isolate;
+}
+.menu .section-title {
+    margin-bottom: 30px;
+    font-size: 32px;
+}
+.menu-grid {
+    display: grid
+;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    margin-bottom: 50px;
+}
+a {
+    font: inherit;
+    text-decoration: none;
+}
+.menu-card .img-box {
+    position: relative;
+    overflow: hidden;
+}
+.menu-rating img {
+    height: 30px;
+    width: 30px;
+}
+.menu-card .menu-rating {
+    display: flex
+;
+    align-items: center;
+    gap: 5px;
+    color: #f7c532;
+}
+.menu-card .wrapper {
+    display: flex
+;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    background: #f3f2f2;
+    margin-bottom: 0px;
+}
+.menu-card .menu-price {
+    background: #f7c532;
+    height: 60px;
+    width: 60px;
+    display: flex
+;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 0px;
+}
+.menu-card .menu-text {
+    font-size: 14px;
+    color: #999999;
+    line-height: 1.6;
+    letter-spacing: 0.4px;
+    margin-bottom: 15px;
+}
+.menu .btn-primary {
+    background: #f7c532;
+    width: 100px;
+    height: 50px;
+    border-radius: 2px;
+    transition: 0.25s ease;
+    display: flex
+;
+    flex-direction: row;
+    gap: 5px;
+    padding-top: 5px;
+    position: relative;
+}
+.testimonials {
+    padding: 120px;
+}
+.testimonials .section-title {
+    margin-bottom: 15px;
+    font-size: 32px;
+}
+.testimonials-grid {
+    display: grid
+;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+}
+.testimonials-card .card-title {
+    color: #000;
+    font-weight: 600;
+    margin-bottom: 15px;
+    font-size: 24px;
+}
+.testimonials-rating {
+    display: flex
+;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 15px;
+}
+.testimonials-text {
+    font-size: 14px;
+    color: #999999;
+    line-height: 1.4;
+    letter-spacing: 0.5px;
+    margin-bottom: 15px;
+}
+img, svg, ion-icon, span, button {
+    display: block;
+}
+h4 {
+    display: block;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
+.footer-wrapper {
+    padding: 20px;
+    display: flex
+;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+a {
+    font: inherit;
+    text-decoration: none;
+}
+.social-link {
+    display: flex
+;
+    gap: 15px;
+}
+.copyright {
+    font-size: 12px;
+    color: #676767;
+    text-align: center;
+    letter-spacing: 0.5px;
+}
+footer {
+    position: relative;
+    background: #f3f2f2;
+    padding: 0px;
+    border: 0px;
+    height: 100px;
+    border-top: 1px solid hsla(0, 0%, 0%, 0.05);
+    box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.05);
+    z-index: 5;
 }
